# Tradexv1

./: README.md  app.py  compare_policies.py  dashboard.py  inference.py  prompt_optimizer.py  pyproject.toml  requirements.txt  validate_submission.sh
.omc/: project-memory.json
.omc/sessions/: 5f8f693d-f4de-4d1a-9d80-040352ab9ff3.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
context/: FinalRound.txt
meverse/: __init__.py  amm.py  policy.py  tasks.py  validation.py
meverse/server/: app.py  meverse_environment.py  requirements.txt
tradex/: agents.py  test_agents.py
